Replaced uses of Stream.toList()
Signed-off-by: mmatlin <33261504+mmatlin@users.noreply.github.com>